Make collection page responsive, minor style fixes - fix recording column overflowing on ie10, other minor ie fixes - make ff flex fix a bit more explicit

--- a/webrecorder/webrecorder/static/stylesheets/styles.css
+++ b/webrecorder/webrecorder/static/stylesheets/styles.css
@@ -857,28 +857,32 @@ h1 button.edit-title {
 .recording-selector {
     margin-top: 8px;
     border: solid 1px #b9b9b9;
-    border-radius: 3px;
+    border-top-right-radius: 3px;
+    border-top-left-radius: 3px;
 
     display: flex;
     display: -ms-flexbox;
     flex-direction: column;
     -ms-flex-direction: column;
     height: 100%;
+
+    -ms-flex: 1 1 100%;
 }
 .recording-selector:after {
     content: "";
     position:absolute;
     z-index: 10;
-    left: 3px;
+    left: 1px;
     bottom: 1px;
     height: 30px;
-    width: calc(100% - 6px);
+    width: calc(100% - 2px);
     background: linear-gradient(to top, rgba(255,255,255,1), rgba(255,255,255,0));
 }
-/* temp fix for flexbox issue with FF */
+
+/* Hack for FF flexbox issue, add up recording header, buttons and margin */
 @-moz-document url-prefix() {
     .recording-selector {
-        height: calc(100% - 74px);
+        height: calc(100% - (35px + 30px + 8px));
     }
 }
 
@@ -1086,6 +1090,16 @@ div.filter-label {
     margin-right: 5px;
 }
 
+.bookmarks-panel {
+    margin-left: 220px;
+}
+@media (max-width: 768px) {
+    .bookmarks-panel {
+        margin-left: 0;
+        padding: 0 15px;
+    }
+}
+
 .table-noborder  {
     border: 0px;
 }
@@ -1102,6 +1116,12 @@ div.filter-label {
     table-layout: fixed;
     word-wrap:break-word;
     margin-top: -2px;
+}
+@media (max-width: 1200px) {
+    .table-bookmarks {
+        table-layout: auto;
+        width: 100% !important;
+    }
 }
 
 .table-bookmarks>thead>tr>th.bookmark-title,
@@ -1204,6 +1224,13 @@ div.filter-label {
 .table-bookmarks.dataTable thead .sorting_desc:after {
     top: 8px;
 }
+@media (max-width: 1200px) {
+    .table-bookmarks.dataTable thead .sorting:after,
+    .table-bookmarks.dataTable thead .sorting_asc:after,
+    .table-bookmarks.dataTable thead .sorting_desc:after {
+        display: none;
+    }
+}
 
 .table-bookmarks-bottom div.dataTables_info {
     display: inline-block;
@@ -1269,6 +1296,7 @@ div.filter-label {
 .recording-bin {
     overflow: auto;
     height: 100%;
+    -ms-flex: 0 1 100%;
 }
 
 /* End collection info page */
@@ -1872,6 +1900,7 @@ div.paging-container:hover .home-link {
     margin-right: 15px;
 }
 .main-bar {
+    width: 100%;
     flex-grow: 1;
     -ms-flex: 30%;
 }
